--- a/README
+++ b/README
@@ -1,16 +1,15 @@
-InternetBanking-HSBC_UK_Personal version 0.01
+InternetBanking-HSBC-UK-Personal version 0.0.1
 =============================================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+This module provides an interface to the UK personal internet banking
+site for HSBC.
 
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+It provides the ability to log in, obtain details about accounts (e.g. bank
+account number, current balance, account name etc) and also download available
+recent transactions ("recent" being the furthest back in time that that the bank
+provides).
+
+An example script is provided which illustrates the features of the module.
 
 INSTALLATION
 
@@ -25,11 +24,10 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+  HTML::TreeBuilder
+  WWW::Mechanize
 
 COPYRIGHT AND LICENCE
-
-Put the correct copyright and licence information here.
 
 Copyright (C) 2011 by James Telford
 
